--- a/src/umr/static/styles/mdl/material.css
+++ b/src/umr/static/styles/mdl/material.css
@@ -11473,4 +11473,5 @@ _:-ms-input-placeholder, :root .mdl-slider.mdl-slider.is-upgraded {
     margin-left: calc(91.6666666667% + 8px); }
     .mdl-grid.mdl-grid--no-spacing > .mdl-cell--11-offset, .mdl-grid.mdl-grid--no-spacing >
     .mdl-cell--11-offset-desktop.mdl-cell--11-offset-desktop {
-      margin-left: 91.6666666667%; } }
+      margin-left: 91.6666666667%; } 
+    }
