--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -37,10 +37,10 @@
                 Articles</a>
 
             <a id="cohort_tab" href="#cohort" class="mdl-layout__tab">
-                Classroom</a>
+                Bookmarks</a>
 
             <a id="starred_tab" href="#starred" class="mdl-layout__tab">
-                History</a>
+                Classroom</a>
         </div>
     </header>
     <div class="mdl-layout__drawer mdl-color--amber-A700">
