new blank css file + changees in sub.css.map file

--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <HTML>
-    <!--This is a test-push for the Kristin Reader branch-->
+    <!--This is a test-push for the Kristin Reader-->
 
 <HEAD>
     <TITLE>Zeeguu Reader</TITLE>
@@ -20,7 +20,7 @@
 
     <!-- Include the subscription package. -->
     <link rel="stylesheet" type="text/css"
-        href="{{ url_for('reader_blueprint.static',filename='scripts/dist/css/subscription-0.9.353.css') }}">
+        href="{{ url_for('reader_blueprint.static',filename='scripts/dist/css/reader.css') }}">
     <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/subscription-0.9.353.js') }}"></script>
 </HEAD>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs">
