--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -1,203 +1,253 @@
 <!DOCTYPE html>
-<HTML>
-    <!--This is a test-push for the Kristin Reader-->
+<html>
+  <!--This is a test-push for the Kristin Reader-->
 
-<HEAD>
-    <TITLE>Zeeguu Reader</TITLE>
-    <META name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <title>Zeeguu Reader</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89557275-2"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-89557275-2"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag('config', 'UA-89557275-2');
+      gtag("config", "UA-89557275-2");
     </script>
 
-    <script> var noAvatarURL = "{{url_for('reader_blueprint.static',filename='images/noAvatar.png')}}";</script>
+    <script>
+      var noAvatarURL =
+        "{{url_for('reader_blueprint.static',filename='images/noAvatar.png')}}";
+    </script>
 
     <!-- Include the subscription package. -->
-    <link rel="stylesheet" type="text/css"
-        href="{{ url_for('reader_blueprint.static',filename='scripts/dist/css/reader.css') }}">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/reader.css') }}"
+    />
     <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/subscription-0.9.353.js') }}"></script>
-</HEAD>
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs">
+  </head>
+  <div
+    class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs"
+  >
     <header class="mdl-layout__header mdl-layout__header--transparent">
-        <div class="mdl-layout__header-row">
+      <div class="mdl-layout__header-row">
+        <a
+          href="/whatnext"
+          id="return_home"
+          class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon"
+        >
+          <i class="material-icons">home_back</i>
+        </a>
+        <div class="mdl-layout-spacer"></div>
+        "
+      </div>
+      <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+        <a id="inbox_tab" href="#inbox" class="mdl-layout__tab"> Articles</a>
 
-            <a href="/whatnext" id="return_home" class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon">
-                <i class="material-icons">home_back</i>
-            </a>
-            <div class="mdl-layout-spacer"></div>
-            "
-        </div>
-        <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-            <a id="inbox_tab" href="#inbox" class="mdl-layout__tab">
-                Articles</a>
+        <a id="cohort_tab" href="#cohort" class="mdl-layout__tab"> Bookmarks</a>
 
-            <a id="cohort_tab" href="#cohort" class="mdl-layout__tab">
-                Bookmarks</a>
-
-            <a id="starred_tab" href="#starred" class="mdl-layout__tab">
-                Classroom</a>
-        </div>
+        <a id="starred_tab" href="#starred" class="mdl-layout__tab">
+          Classroom</a
+        >
+      </div>
     </header>
     <div class="mdl-layout__drawer mdl-color--amber-A700">
-        <nav class="mdl-navigation">
-            <div class="options">
+      <nav class="mdl-navigation">
+        <div class="options">
+          <br /><br /><br />
 
+          <span class="mdl-layout-title">
+            My Interests
+          </span>
+          <br />
 
-                <br /><br /><br />
+          <!-- List of content currently subscribed to. -->
 
+          <span
+            class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
+          >
+            <span class="mdl-chip__text">Languages</span>
+            <button
+              type="button"
+              class="mdl-chip__action show-language-subscriber"
+            >
+              <i class="material-icons mdl-color-text--amber">add_circle</i>
+            </button>
+          </span>
+          <div id="languagesList"></div>
 
-                <span class="mdl-layout-title">
-                    My Interests
-                </span>
-                <br />
+          <div style="font-size: xx-small">&nbsp;</div>
 
-
-                <!-- List of content currently subscribed to. -->
-
-                <span class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour">
-                    <span class="mdl-chip__text">Languages</span>
-                    <button type="button" class="mdl-chip__action show-language-subscriber"><i
-                            class="material-icons mdl-color-text--amber">add_circle</i></button>
-                </span>
-                <div id="languagesList"></div>
-
-                <div style="font-size: xx-small">&nbsp;</div>
-
-                <span class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour">
-                    <span class="mdl-chip__text">Topics</span>
-                    <button type="button" class="mdl-chip__action show-topic-subscriber"><i
-                            class="material-icons mdl-color-text--amber">add_circle</i></button>
-                </span>
-                <div id="searchesList"></div>
-                <div id="topicsList">
-                    <div id="any_topic" style="display:none;">&nbsp;&nbsp;&nbsp;&nbsp;<i style="color:gray">Showing all
-                            topics...</i></div>
-                </div>
-
-                <div style="font-size: xx-small">&nbsp;</div>
-
-                <span class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour">
-                    <span class="mdl-chip__text">Non-Interests</span>
-                    <button type="button" class="mdl-chip__action show-filter-subscriber"><i
-                            class="material-icons mdl-color-text--amber">add_circle</i></button>
-                </span>
-                <div id="searchesFilterList"></div>
-                <div id="topicsFilterList"></div>
-
-                <div style="font-size: xx-small">&nbsp;</div>
-
-                <br />
-                <span class="mdl-layout-title">
-                    Search
-                </span>
-
-
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-                    <label class="mdl-button mdl-js-button mdl-button--icon" for="search-expandable">
-                        <i class="material-icons">search</i>
-                    </label>
-                    <div class="mdl-textfield__expandable-holder">
-                        <input class="mdl-textfield__input" type="text" id="search-expandable">
-                        <label class="mdl-textfield__label" for="search-expandable">Search...</label>
-                    </div>
-                </div>
-
-
+          <span
+            class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
+          >
+            <span class="mdl-chip__text">Topics</span>
+            <button
+              type="button"
+              class="mdl-chip__action show-topic-subscriber"
+            >
+              <i class="material-icons mdl-color-text--amber">add_circle</i>
+            </button>
+          </span>
+          <div id="searchesList"></div>
+          <div id="topicsList">
+            <div id="any_topic" style="display:none;">
+              &nbsp;&nbsp;&nbsp;&nbsp;<i style="color:gray"
+                >Showing all topics...</i
+              >
             </div>
-        </nav>
+          </div>
+
+          <div style="font-size: xx-small">&nbsp;</div>
+
+          <span
+            class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
+          >
+            <span class="mdl-chip__text">Non-Interests</span>
+            <button
+              type="button"
+              class="mdl-chip__action show-filter-subscriber"
+            >
+              <i class="material-icons mdl-color-text--amber">add_circle</i>
+            </button>
+          </span>
+          <div id="searchesFilterList"></div>
+          <div id="topicsFilterList"></div>
+
+          <div style="font-size: xx-small">&nbsp;</div>
+
+          <br />
+          <span class="mdl-layout-title">
+            Search
+          </span>
+
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+            <label
+              class="mdl-button mdl-js-button mdl-button--icon"
+              for="search-expandable"
+            >
+              <i class="material-icons">search</i>
+            </label>
+            <div class="mdl-textfield__expandable-holder">
+              <input
+                class="mdl-textfield__input"
+                type="text"
+                id="search-expandable"
+              />
+              <label class="mdl-textfield__label" for="search-expandable"
+                >Search...</label
+              >
+            </div>
+          </div>
+        </div>
+      </nav>
     </div>
     <main class="mdl-layout__content">
-        <section class="mdl-layout__tab-panel is-active" id="inbox">
-            <div class="page-content">
-                <!-- Search notification -->
-                <ul id="searchNotification" class="searchNotification"></ul>
-                <!-- List of articles -->
-                <ul id="articleLinkList" class="articleLinkList"></ul>
-                <BR />
-                <div id="emptyArticleListImage" class="emptyPage">
-                    <img class="sadEleph" src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
-                        alt="Not subscribed to any feeds..." />
-                </div>
-                <div class="loader">
-                    <img class="eleph" src="{{ url_for('reader_blueprint.static',filename='images/elephlogo.png') }}"
-                        alt="Loading..." />
-                </div>
-                <div id="toastmessage" class="mdl-js-snackbar mdl-snackbar">
-                    <div class="mdl-snackbar__text"></div>
-                    <button class="mdl-snackbar__action" type="button"></button>
-                </div>
-            </div>
-        </section>
-        <section class="mdl-layout__tab-panel" id="starred">
-            <div class="page-content">
-                <ul id="starredArticleList" class="articleLinkList"></ul>
-                <div id="emptyStarredArticleListImage" class="emptyPage">
-                    <img class="sadEleph" src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
-                        alt="Not subscribed to any feeds..." />
-                </div>
-            </div>
-        </section>
-        <section class="mdl-layout__tab-panel" id="cohort">
-            <div class="page-content">
-                <ul id="cohortArticleList" class="articleLinkList"></ul>
-                <div id="emptyCohortArticleListImage" class="emptyPage">
-                    <p>There are no articles in your class</p>
-                    <img class="sadEleph" src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
-                        alt="Not subscribed to any feeds..." />
-                </div>
-            </div>
-        </section>
+      <section class="mdl-layout__tab-panel is-active" id="inbox">
+        <div class="page-content">
+          <!-- Search notification -->
+          <ul id="searchNotification" class="searchNotification"></ul>
+          <!-- List of articles -->
+          <ul id="articleLinkList" class="articleLinkList"></ul>
+          <br />
+          <div id="emptyArticleListImage" class="emptyPage">
+            <img
+              class="sadEleph"
+              src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
+              alt="Not subscribed to any feeds..."
+            />
+          </div>
+          <div class="loader">
+            <img
+              class="eleph"
+              src="{{ url_for('reader_blueprint.static',filename='images/elephlogo.png') }}"
+              alt="Loading..."
+            />
+          </div>
+          <div id="toastmessage" class="mdl-js-snackbar mdl-snackbar">
+            <div class="mdl-snackbar__text"></div>
+            <button class="mdl-snackbar__action" type="button"></button>
+          </div>
+        </div>
+      </section>
+      <section class="mdl-layout__tab-panel" id="starred">
+        <div class="page-content">
+          <ul id="starredArticleList" class="articleLinkList"></ul>
+          <div id="emptyStarredArticleListImage" class="emptyPage">
+            <img
+              class="sadEleph"
+              src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
+              alt="Not subscribed to any feeds..."
+            />
+          </div>
+        </div>
+      </section>
+      <section class="mdl-layout__tab-panel" id="cohort">
+        <div class="page-content">
+          <ul id="cohortArticleList" class="articleLinkList"></ul>
+          <div id="emptyCohortArticleListImage" class="emptyPage">
+            <p>There are no articles in your class</p>
+            <img
+              class="sadEleph"
+              src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
+              alt="Not subscribed to any feeds..."
+            />
+          </div>
+        </div>
+      </section>
     </main>
-</div>
+  </div>
 
-<!-- Template for subscribed source items -->
-<script id="subscription-template-source" type="text/template">
-    <span sourceRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-		<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
-		<a class="mdl-chip__action removeButton">
-			<i class="material-icons">cancel</i>
-		</a>
-	</span>
-</script>
+  <!-- Template for subscribed source items -->
+  <script id="subscription-template-source" type="text/template">
+       <span sourceRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
+    	<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
+    	<a class="mdl-chip__action removeButton">
+    		<i class="material-icons">cancel</i>
+    	</a>
+    </span>
+  </script>
 
-<!-- Template for subscribed topic items -->
-<script id="subscription-template-topic" type="text/template">
-    <span topicRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-		<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
-		<a class="mdl-chip__action removeButton">
-			<i class="material-icons">cancel</i>
-		</a>
-	</span>
-</script>
+  <!-- Template for subscribed topic items -->
+  <script id="subscription-template-topic" type="text/template">
+       <span topicRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
+    	<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
+    	<a class="mdl-chip__action removeButton">
+    		<i class="material-icons">cancel</i>
+    	</a>
+    </span>
+  </script>
 
-<!-- Template for subscribed search items -->
-<script id="subscription-template-search" type="text/template">
-    <span searchRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-		<span class="mdl-chip__text">{% raw %}{{ search }}{% endraw %}</span>
-		<a class="mdl-chip__action removeButton">
-			<i class="material-icons">cancel</i>
-		</a>
-	</span>
-</script>
+  <!-- Template for subscribed search items -->
+  <script id="subscription-template-search" type="text/template">
+       <span searchRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
+    	<span class="mdl-chip__text">{% raw %}{{ search }}{% endraw %}</span>
+    	<a class="mdl-chip__action removeButton">
+    		<i class="material-icons">cancel</i>
+    	</a>
+    </span>
+  </script>
 
-<!-- Template for subscribed language items -->
-<script id="subscription-template-language" type="text/template">
-    <span languageRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-		<span class="mdl-chip__text">{% raw %}{{ language }}{% endraw %}</span>
-		<a class="mdl-chip__action removeButton">
-			<i class="material-icons">cancel</i>
-		</a>
-	</span>
-</script>
+  <!-- Template for subscribed language items -->
+  <script id="subscription-template-language" type="text/template">
+       <span languageRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
+    	<span class="mdl-chip__text">{% raw %}{{ language }}{% endraw %}</span>
+    	<a class="mdl-chip__action removeButton">
+    		<i class="material-icons">cancel</i>
+    	</a>
+    </span>
+  </script>
 
-<!-- Template for an article link. -->
-<script id="articleLink-template" type="text/template">
+  <!-- Template for an article link. -->
+  <script id="articleLink-template" type="text/template">
     <li class="fadeoutOnClick articleLinkEntry  {% raw %}{{alreadyOpenedClass}}{% endraw %}"
         articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
         <a href="{{ url_for('reader_blueprint.get_article') }}?articleID={% raw %}{{ articleLinkID }}{% endraw %}">
@@ -225,10 +275,10 @@
         </a>
     </li>
     <div class="articleLinkSpacer"></div>
-</script>
+  </script>
 
-<!-- Template for a starred article link. -->
-<script id="starred-articleLink-template" type="text/template">
+  <!-- Template for a starred article link. -->
+  <script id="starred-articleLink-template" type="text/template">
     <li class="articleLinkEntry" articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
 
         <div class="articleLinkHeader">
@@ -255,10 +305,10 @@
         </div>
     </li>
     <div class="articleLinkSpacer"></div>
-</script>
+  </script>
 
-<!-- Template for a cohort article link. -->
-<script id="cohort-articleLink-template" type="text/template">
+  <!-- Template for a cohort article link. -->
+  <script id="cohort-articleLink-template" type="text/template">
     <li class="fadeoutOnClick articleLinkEntry  {% raw %}{{alreadyOpenedClass}}{% endraw %}"
         articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
         <a href="{{ url_for('reader_blueprint.get_article') }}?articleID={% raw %}{{ articleLinkID }}{% endraw %}">
@@ -288,8 +338,7 @@
     <div class="articleLinkSpacer"></div>
   </script>
 
-
-<script id="search-notification-template" type="text/template">
+  <script id="search-notification-template" type="text/template">
     <li class="fadeoutOnClick articleLinkEntry search-notification-box">
         <div class="articleLinkHeader">
             <div class="searchText headerElement">
@@ -301,10 +350,8 @@
         </div>
     </li>
     <div class="articleLinkSpacer"></div>
-</script>
+  </script>
 
-<!-- Dialog windows for adding a source, topic and filter. -->
-{% include 'addSourceDialog.html' %}
-{% include 'addTopicDialog.html' %}
-
-</HTML>
+  <!-- Dialog windows for adding a source, topic and filter. -->
+  {% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
+</html>
