--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -27,6 +27,11 @@
     </script>
 
     <!-- Include the subscription package. -->
+    <!--FONT LINK-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <!--CSS for header NEW-->
     <link
       rel="stylesheet"
