--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -62,14 +62,27 @@
         <div class="mdl-layout-spacer"></div>
         "
       </div>
-      <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+      <div class="mdl-layout__tab-bar mdl-js-ripple-effect" class="select-article">
+      <p class="welcome_personal">Welcome,</p>
+      <h1 class="select-article">Select an Article</h1>
+      <div class="all__tabs">
+      <div class="row__tab">
         <a id="inbox_tab" href="#inbox" class="mdl-layout__tab"> Articles</a>
-
+        </div>
+        <div class="row__bar">
+        <div class="bar"></div>
+        </div>
+        <div class="row__tab">
         <a id="cohort_tab" href="#cohort" class="mdl-layout__tab"> Bookmarks</a>
-
+        </div>
+        <div class="row__bar">
+        <div class="bar"></div>
+        </div>
+        <div class="row__tab">
         <a id="starred_tab" href="#starred" class="mdl-layout__tab">
           Classroom</a
-        >
+        ></div>
+        </div>
       </div>
     </header>
     <div class="mdl-layout__drawer mdl-color--amber-A700">
