--- a/src/umr/static/scripts/newStyling/reader-list.css
+++ b/src/umr/static/scripts/newStyling/reader-list.css
@@ -1,3 +1,86 @@
 body {
   background-color:white;
+  margin: auto;
+  color: black
+}
+
+/***********The article list style************/
+ #articleLinkList{
+  list-style-type:none; 
+  list-style-position: inside;
+  padding:0; 
+  margin-left: auto;
+  margin-right:auto; 
+  width:100%; 
+  max-width: 60em;
+  cursor:pointer; 
+  display:flex; 
+  flex-direction: column;
+}
+
+#articleLinkList a {
+  text-decoration: none;
+  font-family: Montserrat;
+  color:black;
+  font-size: larger;
+}
+
+.articleLinkTitle{
+  font-size:20px;
+  color:black; 
+}
+
+.articleLinkSummary{
+  font-size: 16px;
+  color: #6D6D6D;
+  max-width: 44em;
+  line-height: 1.5em;
+  margin-top: 7px; 
+}
+
+.articleLinkEntry{
+  border-left: solid #FFBB54; 
+  margin-top: 31px;
+  padding-left: 13px;
+}
+
+
+.headerElement{
+  display: table-cell; 
+}
+
+.articleLinkDifficulty{
+  width:3em; 
+  float:right; 
+}
+
+.articleLinkDifficultyText{
+  position: absolute;
+  padding: 0.3em; 
+  width:3em; 
+  height:3em; 
+  text-align: center;
+  border-radius:50%; 
+  background: #F1F0F0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.feedIcon{
+  background-color: white;
+  width: 32px;
+  height: 32px;
+  margin-right: 19px;
+}
+.articleTopics{
+  display: flex;
+  color:black;
+}
+
+.publishingTime{
+  margin-right: 15px; 
+}
+
+.difficulty-level{
+  margin-left:123px; 
 }
