--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -45,6 +45,15 @@
       type="text/css"
       href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/reader-list.css') }}"
     />
+
+      <!--CSS for article-settings NEW-->
+      <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}"
+    />
+
+ 
     <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/subscription-0.9.353.js') }}"></script>
   </head>
   <div
@@ -90,13 +99,13 @@
         <div class="options">
           <br /><br /><br />
 
-          <span class="mdl-layout-title">
+        <!----  <span class="mdl-layout-title">
             My Interests
           </span>
-          <br />
+          <br /> -->
 
           <!-- List of content currently subscribed to. -->
-
+<!--
           <span
             class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
           >
@@ -110,24 +119,27 @@
           </span>
           <div id="languagesList"></div>
 
-          <div style="font-size: xx-small">&nbsp;</div>
+          <div style="font-size: xx-small">&nbsp;</div> -->
 
           <span
             class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
           >
-            <span class="mdl-chip__text">Topics</span>
+           
             <button
               type="button"
               class="mdl-chip__action show-topic-subscriber"
             >
-              <i class="material-icons mdl-color-text--amber">add_circle</i>
+            <span class="mdl-chip__text">Interests</span>
+           <!--  <i class="material-icons mdl-color-text--amber">add_circle</i>-->
             </button>
+            <div class="tags"></div>
           </span>
+  
           <div id="searchesList"></div>
           <div id="topicsList">
             <div id="any_topic" style="display:none;">
               &nbsp;&nbsp;&nbsp;&nbsp;<i style="color:gray"
-                >Showing all topics...</i
+                >Showing all Interests...</i
               >
             </div>
           </div>
@@ -137,12 +149,13 @@
           <span
             class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
           >
-            <span class="mdl-chip__text">Non-Interests</span>
+
             <button
               type="button"
               class="mdl-chip__action show-filter-subscriber"
             >
-              <i class="material-icons mdl-color-text--amber">add_circle</i>
+            <span class="mdl-chip__text">Non-Interests</span>
+             <!-- <i class="material-icons mdl-color-text--amber">add_circle</i>-->
             </button>
           </span>
           <div id="searchesFilterList"></div>
@@ -151,26 +164,27 @@
           <div style="font-size: xx-small">&nbsp;</div>
 
           <br />
-          <span class="mdl-layout-title">
+         <!--- <span class="mdl-layout-title">
             Search
-          </span>
+          </span>-->
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
             <label
               class="mdl-button mdl-js-button mdl-button--icon"
               for="search-expandable"
             >
-              <i class="material-icons">search</i>
+           <!---   <i class="material-icons">search</i>-->
             </label>
             <div class="mdl-textfield__expandable-holder">
               <input
                 class="mdl-textfield__input"
                 type="text"
                 id="search-expandable"
+                placeholder="search"
               />
-              <label class="mdl-textfield__label" for="search-expandable"
+              <!--<label class="mdl-textfield__label" for="search-expandable"
                 >Search...</label
-              >
+              >-->
             </div>
           </div>
         </div>
