trying interest block

--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -46,14 +46,13 @@
       href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/reader-list.css') }}"
     />
 
-      <!--CSS for article-settings NEW-->
-      <link
+    <!--CSS for article-settings NEW-->
+    <link
       rel="stylesheet"
       type="text/css"
       href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}"
     />
 
- 
     <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/subscription-0.9.353.js') }}"></script>
 
     <!-- Include the translation package. -->
@@ -115,13 +114,13 @@
         <div class="options">
           <br /><br /><br />
 
-        <!----  <span class="mdl-layout-title">
+          <!----  <span class="mdl-layout-title">
             My Interests
           </span>
           <br /> -->
 
           <!-- List of content currently subscribed to. -->
-<!--
+          <!--
           <span
             class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
           >
@@ -140,17 +139,15 @@
           <span
             class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
           >
-           
             <button
               type="button"
               class="mdl-chip__action show-topic-subscriber"
             >
-            <span class="mdl-chip__text">Interests</span>
-           <!--  <i class="material-icons mdl-color-text--amber">add_circle</i>-->
+              <span class="mdl-chip__text">Interests</span>
+              <!--  <i class="material-icons mdl-color-text--amber">add_circle</i>-->
             </button>
-            <div class="tags"></div>
           </span>
-  
+
           <div id="searchesList"></div>
           <div id="topicsList">
             <div id="any_topic" style="display:none;">
@@ -165,13 +162,12 @@
           <span
             class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
           >
-
             <button
               type="button"
               class="mdl-chip__action show-filter-subscriber"
             >
-            <span class="mdl-chip__text">Non-Interests</span>
-             <!-- <i class="material-icons mdl-color-text--amber">add_circle</i>-->
+              <span class="mdl-chip__text">Non-Interests</span>
+              <!-- <i class="material-icons mdl-color-text--amber">add_circle</i>-->
             </button>
           </span>
           <div id="searchesFilterList"></div>
@@ -180,7 +176,7 @@
           <div style="font-size: xx-small">&nbsp;</div>
 
           <br />
-         <!--- <span class="mdl-layout-title">
+          <!--- <span class="mdl-layout-title">
             Search
           </span>-->
 
@@ -189,7 +185,7 @@
               class="mdl-button mdl-js-button mdl-button--icon"
               for="search-expandable"
             >
-           <!---   <i class="material-icons">search</i>-->
+              <!---   <i class="material-icons">search</i>-->
             </label>
             <div class="mdl-textfield__expandable-holder">
               <input
@@ -206,6 +202,10 @@
         </div>
       </nav>
     </div>
+    <div class="tagsOfTopics">
+      <p id="listOfTopicstoChoose"></p>
+    </div>
+
     <main class="mdl-layout__content">
       <section class="mdl-layout__tab-panel is-active" id="inbox">
         <div class="page-content">
