not fully working, only one topic shown, loopissue

--- a/src/umr/templates/addTopicDialog.html
+++ b/src/umr/templates/addTopicDialog.html
@@ -1,4 +1,8 @@
-<LINK rel="stylesheet" href= "{{ url_for('reader_blueprint.static',filename='styles/flag-icon/flag-icon.css') }}" type= "text/css">
+<link
+rel="stylesheet"
+type="text/css"
+href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}"
+/>
 
 <!-- Template for the topic dialog -->
 <script id="add-topic-dialog-template" type="text/template">
