--- a/src/umr/static/scripts/newStyling/article-settings.css
+++ b/src/umr/static/scripts/newStyling/article-settings.css
@@ -3,10 +3,14 @@
   display: flex;
   justify-content: center;
   background-color: #ffffff;
+  float: left;
+  flex-direction: column-reverse;
+  width: 100%;
 }
 
 .options {
   display: inline-flex;
+  float: left;
 }
 
 /*Styling for all buttons*/
@@ -20,6 +24,14 @@
   font-size: 16px;
   font-family: Montserrat;
   font-weight: 400;
+  text-align: center;
+  min-width: 100px;
+}
+
+.interestButton,
+button {
+  margin-right: 10px;
+  width: 100%;
 }
 
 #search-expandable {
@@ -27,12 +39,25 @@
   border: solid #ffbb54;
   border-radius: 13px;
   padding: 2px;
+  padding-left: 4px;
+  padding-right: 4px;
   font-family: Montserrat;
-  font-weight: 400;
+  font-weight: 100;
+  font-size: 14px;
+  width: 280px;
+}
+
+.widthOfColumn {
+  max-width: 54em;
+  flex: 1;
+  justify-content: center;
+  margin: auto;
+  margin-top: 20px;
 }
 
 .tagsOfTopics {
-  background-color: pink;
+  background: #fff4e2;
+  border-radius: 3px;
   display: none;
   width: 100%;
   padding: 50px 0;
@@ -45,6 +70,36 @@
   color: white;
 }
 
+/*** SORTING ***/
+.sortingCategories {
+  float: right;
+  display: flex;
+  width: 10em;
+  text-align: center;
+}
+
+.levelSorting {
+  margin-left: 64px;
+  text-align: center;
+}
+.triangle {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 20px solid #dbd8d8;
+}
+
+.levelLable,
+.wordLable {
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 16px;
+}
+
+.material-icons {
+  display: none;
+}
 /*** SWEEET ALERT ******/
 body.stop-scrolling {
   height: 100%;
