--- a/src/umr/static/scripts/newStyling/reader-list.css
+++ b/src/umr/static/scripts/newStyling/reader-list.css
@@ -30,7 +30,7 @@ body {
   color: black;
   padding-right: 250px;
 }
-.articleLinkTranslation {
+.articleLinkSummary {
   font-size: 16px;
   color: #6d6d6d;
   max-width: 54em;
