--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <!--This is a test-push for the Kristin Reader-->
+  <!--This is a cleaner version of the Reader-->
 
   <head>
     <title>Zeeguu Reader</title>
@@ -20,11 +20,12 @@
 
       gtag("config", "UA-89557275-2");
     </script>
-
+    <!--NOT SURE IF WE NEED THIS
     <script>
       var noAvatarURL =
         "{{url_for('reader_blueprint.static',filename='images/noAvatar.png')}}";
     </script>
+    -->
 
     <!-- Include the subscription package. -->
 
@@ -57,11 +58,14 @@
 
     <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/translation-0.9.353.js') }}"></script>
   </head>
+      <!--NOT SURE IF WE NEED THIS
   <div
     class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs"
   >
+      -->
     <header class="mdl-layout__header mdl-layout__header--transparent">
-      <div class="mdl-layout__header-row">
+          <!--NOT SURE IF WE NEED THIS
+            <div class="mdl-layout__header-row">
         <a
           href="/whatnext"
           id="return_home"
@@ -72,8 +76,9 @@
         <div class="mdl-layout-spacer"></div>
         "
       </div>
+    -->
       <div
-        class="mdl-layout__tab-bar mdl-js-ripple-effect"
+        class="mdl-layout__tab-bar"
         class="select-article"
       >
         <p class="welcome_personal">Welcome,</p>
@@ -146,18 +151,22 @@
 
             <div id="searchesList"></div>
             <div id="topicsList">
+              
               <div id="any_topic" style="display:none;">
-                &nbsp;&nbsp;&nbsp;&nbsp;<i style="color:gray"
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <!--NOT SURE IF WE NEED THIS
+                  <i style="color:gray"
                   >Showing all Interests...</i
-                >
+                >-->
               </div>
             </div>
 
             <div style="font-size: xx-small">&nbsp;</div>
             <div class="interestButton">
+              <!--NOT SURE IF WE NEED THIS
               <span
                 class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
-              >
+              >-->
                 <button
                   type="button"
                   class="mdl-chip__action show-filter-subscriber"
@@ -227,18 +236,12 @@
             <ul id="articleLinkList" class="articleLinkList"></ul>
             <br />
             <div id="emptyArticleListImage" class="emptyPage">
-              <img
-                class="sadEleph"
-                src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
-                alt="Not subscribed to any feeds..."
-              />
+              <p>No articles
+              </p>
+            
             </div>
             <div class="loader">
-              <img
-                class="eleph"
-                src="{{ url_for('reader_blueprint.static',filename='images/elephlogo.png') }}"
-                alt="Loading..."
-              />
+              <p>No class</p>
             </div>
             <div id="toastmessage" class="mdl-js-snackbar mdl-snackbar">
               <div class="mdl-snackbar__text"></div>
@@ -250,11 +253,7 @@
           <div class="page-content">
             <ul id="starredArticleList" class="articleLinkList"></ul>
             <div id="emptyStarredArticleListImage" class="emptyPage">
-              <img
-                class="sadEleph"
-                src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
-                alt="Not subscribed to any feeds..."
-              />
+              <p>No Starred Articles</p>
             </div>
           </div>
         </section>
@@ -263,11 +262,6 @@
             <ul id="cohortArticleList" class="articleLinkList"></ul>
             <div id="emptyCohortArticleListImage" class="emptyPage">
               <p>There are no articles in your class</p>
-              <img
-                class="sadEleph"
-                src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
-                alt="Not subscribed to any feeds..."
-              />
             </div>
           </div>
         </section>
@@ -329,18 +323,12 @@
                           > {% raw %}{{articleDifficulty}}{% endraw %} </span>
                      <span class="articleLinkDifficultyText"> {% raw %}{{ wordCount }}{% endraw %}</span>
                 </div>
-            </div>
-            <div class="articleLinkTranslation">
-              {% raw %}{{articleLinkTitle}}{% endraw %}
-              <p class="title translatable">
-                <span id="articleTitle"></span>
-            </p>
+              </div>
+              <div class="articleLinkSummary">
+                {% raw %}{{articleSummary}}{% endraw %}..
+                <!--Create a rule for rendering only the first 60 char or so-->
           </div>
-            <!--Article Summary
-            <div class="articleLinkSummary">
-                {% raw %}{{articleSummary}}{% endraw %}
-            </div>
-          -->
+            
             <div class="articleTopics">
               <div class="articleLinkImage">
                 <img src="{% raw %}{{articleIcon}}{% endraw %}" class="feedIcon mdl-list__item-avatar"/>
@@ -354,66 +342,7 @@
     <div class="articleLinkSpacer"></div>
   </script>
 
-  <!-- Template for a starred article link. -->
-  <script id="starred-articleLink-template" type="text/template">
-    <li class="articleLinkEntry" articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
 
-        <div class="articleLinkHeader">
-
-
-            <a class="fadeoutOnClick articleLinkTitle headerElement"
-               href="{{ url_for('reader_blueprint.get_article') }}?articleID={% raw %}{{ articleLinkID }}{% endraw %}">
-
-
-                {% raw %}{{ articleLinkTitle }}{% endraw %}
-
-                <br/>
-                <i style="display:{% raw %}{{ articleLinkDisplayStar }}{% endraw %}"
-                   class="material-icons star">star</i>
-                <i style="display:{% raw %}{{ articleLinkDisplayLike }}{% endraw %}" class="material-icons star">thumb_up</i>
-
-
-            </a>
-
-
-            <div class="starredFlag headerElement">
-                <span class="flag-icon flag-icon-{% raw %}{{ articleLinkLanguage }}{% endraw %} headerElement"></span>
-            </div>
-        </div>
-    </li>
-    <div class="articleLinkSpacer"></div>
-  </script>
-
-  <!-- Template for a cohort article link. -->
-  <script id="cohort-articleLink-template" type="text/template">
-    <li class="fadeoutOnClick articleLinkEntry  {% raw %}{{alreadyOpenedClass}}{% endraw %}"
-        articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
-        <a href="{{ url_for('reader_blueprint.get_article') }}?articleID={% raw %}{{ articleLinkID }}{% endraw %}">
-            <div class="articleLinkHeader">
-                <!-- <div class="articleLinkImage headerElement">
-                    <img src="{% raw %}{{articleIcon}}{% endraw %}" class="feedIcon mdl-list__item-avatar"/>
-                </div> -->
-                <div class="articleLinkTitle headerElement">
-                    {% raw %}{{ articleLinkTitle }}{% endraw %}
-                    <span class="wordCount"> ({% raw %}{{ wordCount }}{% endraw %} words)</span>
-                </div>
-                <div class="articleLinkDifficulty headerElement">
-                    <span class="articleLinkDifficultyText"
-                          style="background: {% raw %}{{articleDifficultyColor}}{% endraw %}"> {% raw %}{{articleDifficulty}}{% endraw %} </span>
-                    <span class="linkLanguageIcon flag-icon flag-icon-{% raw %}{{ articleLinkLanguage }}{% endraw %}"></span>
-                </div>
-            </div>
-            <div class="articleLinkSummary">
-                <span class="publishingTime">({% raw %}{{articleLinkPublished}}{% endraw %})</span>
-                {% raw %}{{articleSummary}}{% endraw %}
-            </div>
-            <div class="articleTopics">
-                {% raw %}{{articleTopics}}{% endraw %}
-            </div>
-        </a>
-    </li>
-    <div class="articleLinkSpacer"></div>
-  </script>
 
   <script id="search-notification-template" type="text/template">
     <li class="fadeoutOnClick articleLinkEntry search-notification-box">
@@ -430,5 +359,7 @@
   </script>
 
   <!-- Dialog windows for adding a source, topic and filter. -->
+  <!--NOT SURE IF WE NEED THIS 
   {% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
+  -->
 </html>
