--- a/src/umr/templates/addTopicDialog.html
+++ b/src/umr/templates/addTopicDialog.html
@@ -1,8 +1,5 @@
-<link
-rel="stylesheet"
-type="text/css"
-href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}"
-/>
+<link rel="stylesheet" type="text/css"
+  href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}" />
 
 <!-- Template for the topic dialog -->
 <script id="add-topic-dialog-template" type="text/template">
@@ -47,9 +44,13 @@ href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-
 <script id="topicAddable-template" type="text/template">
   <div addableID="{% raw %}{{ id }}{% endraw %}" class="mdl-list__item">
     <span class="mdl-list__item-primary-content">
-      <img src="{% raw %}{{ image_url }}{% endraw %}" class="feedIcon mdl-list__item-avatar"/>
-      <span class="addableTitle">{% raw %}{{ title }}{% endraw %}</span>
-    </span>
+      <!-- <img src="{% raw %}{{ image_url }}{% endraw %}" class="feedIcon mdl-list__item-avatar"/> -->
+        <button 
+          type="button"
+          class="mdl-chip__action interests"
+          >
+        <span class="addableTitle">{% raw %}{{ title }}{% endraw %}</span>
+        </button>
     <a class="mdl-list__item-secondary-action subscribeButton">
       <i class="material-icons ">add_circle</i>
     </a>
